--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta name="author" content="Mateusz Byczek, Kacper Kantarowski">
 <meta name="copyright" content="(c) 2021 Mateusz Byczek, Kacper Kantarowski">
 <meta charset="utf-8">
-<link href="css.css" rel="stylesheet" type="text/css">
+<link href="style.css" rel="stylesheet" type="text/css">
 </head>
 <body background="">
  
