--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
 <link href="style.css" rel="stylesheet" type="text/css">
 </head>
 <body background="">
+<div id="pudlo"> 
+ <div id="tresc">
+ Robert F. Fox (ur. 11 października 1991), znany zawodowo jako Toby Fox, amerykański twórca i kompozytor gier wideo. Najbardziej znany z tworzenia gier RPG Undertale i Deltarune, rozpoczął karierę jako kompozytor komiksu internetowego Homestuck. Fox skomponował także dla wielu innych niezależnych gier wideo i przyczynił się do powstania ścieżek dźwiękowych do Pokémon Sword and Shield i Super Smash Bros. Ultimate.
+ </div>
+ </div>
  
 </body>
 </html>
