--- a/index.html
+++ b/index.html
@@ -13,6 +13,12 @@
  Robert F. Fox (ur. 11 października 1991), znany zawodowo jako Toby Fox, amerykański twórca i kompozytor gier wideo. Najbardziej znany z tworzenia gier RPG Undertale i Deltarune, rozpoczął karierę jako kompozytor komiksu internetowego Homestuck. Fox skomponował także dla wielu innych niezależnych gier wideo i przyczynił się do powstania ścieżek dźwiękowych do Pokémon Sword and Shield i Super Smash Bros. Ultimate.
  </div>
  </div>
+ <div id="linki"> 
+<a href="https://open.spotify.com/album/2M2Ae2SvZe3fmzUtlVOV5Z?si=BAqQm7LgSoiSpariArvRHA&dl_branch=1" target="blank">Undertale</a><br>
+<a href="https://open.spotify.com/album/6putGW0KxGMrgTZzplp2pF?si=cOXJpc0iRxO2uizOGa1mOA&dl_branch=1" target="blank">Deltarune Chapter 1</a><br>
+<a href="https://open.spotify.com/playlist/14IZqZK9O2vyE8TU5KLIbc?si=d3e751b28ecb40e7" target="blank">Deltarune Chapter 2</a>
+</div>
+ 
  
 </body>
 </html>
