--- a/index.html
+++ b/index.html
@@ -9,11 +9,13 @@
 </head>
 <body background="bg.png">
 <div id="pudlo"> 
- <div id="tresc">
+ <center>
+  <div id="tresc">
  Robert F. Fox (ur. 11 października 1991), znany zawodowo jako Toby Fox, amerykański twórca i kompozytor gier wideo. Najbardziej znany z tworzenia gier RPG Undertale i Deltarune, rozpoczął karierę jako kompozytor komiksu internetowego Homestuck. Fox skomponował także dla wielu innych niezależnych gier wideo i przyczynił się do powstania ścieżek dźwiękowych do Pokémon Sword and Shield i Super Smash Bros. Ultimate.<br><br>
  
 Toby Fox zaczął komponować muzykę do webkomiksu Homestuck Andrew Hussie'go w 2009 roku podczas ostatniej klasy liceum. Choć początkowo nie zareagował, gdy Hussie założył "Music Contribution Team" w kwietniu 2009 roku i umieścił post z prośbą o udział kompozytorów, Hussie zwrócił uwagę na jego pracę, gdy Fox zaczął przesyłać fortepianowe covery muzyki z webkomiksu na forum MS Paint Adventures.  Fox skomponował muzykę do gry wideo Homestuck z 2017 roku Hiveswap, Undertale artysty Temmie Chang's krótka gra narracyjna Escaped Chasm,[6] i Game Freak's 2019 RPG Little Town Hero, z których ostatnia została zaaranżowana przez kompozytora Pokémon Hitomi Sato. Skomponował również utwór dla Pokémon Sword and Shield i piosenkę wokalną dla albumu PRAY Itoki Hana.
  </div>
+ </center>
  </div>
  <div id="linki"> 
 <a href="https://open.spotify.com/album/2M2Ae2SvZe3fmzUtlVOV5Z?si=BAqQm7LgSoiSpariArvRHA&dl_branch=1" target="blank">Undertale</a><br>
