--- a/index.html
+++ b/index.html
@@ -16,11 +16,14 @@
 Toby Fox zaczął komponować muzykę do webkomiksu Homestuck Andrew Hussie'go w 2009 roku podczas ostatniej klasy liceum. Choć początkowo nie zareagował, gdy Hussie założył "Music Contribution Team" w kwietniu 2009 roku i umieścił post z prośbą o udział kompozytorów, Hussie zwrócił uwagę na jego pracę, gdy Fox zaczął przesyłać fortepianowe covery muzyki z webkomiksu na forum MS Paint Adventures.  Fox skomponował muzykę do gry wideo Homestuck z 2017 roku Hiveswap, Undertale artysty Temmie Chang's krótka gra narracyjna Escaped Chasm,[6] i Game Freak's 2019 RPG Little Town Hero, z których ostatnia została zaaranżowana przez kompozytora Pokémon Hitomi Sato. Skomponował również utwór dla Pokémon Sword and Shield i piosenkę wokalną dla albumu PRAY Itoki Hana.
  </div>
  </center>
- </div>
  <div id="linki"> 
 <a href="https://open.spotify.com/album/2M2Ae2SvZe3fmzUtlVOV5Z?si=BAqQm7LgSoiSpariArvRHA&dl_branch=1" target="blank">Undertale</a><br>
 <a href="https://open.spotify.com/album/6putGW0KxGMrgTZzplp2pF?si=cOXJpc0iRxO2uizOGa1mOA&dl_branch=1" target="blank">Deltarune Chapter 1</a><br>
 <a href="https://open.spotify.com/playlist/14IZqZK9O2vyE8TU5KLIbc?si=d3e751b28ecb40e7" target="blank">Deltarune Chapter 2</a>
+</div>
+ <div id="zdiecie">
+ <img src="fox_zdiecie">
+ </div>
 </div>
  
  
