--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ Toby Fox zaczął komponować muzykę do webkomiksu Homestuck Andrew Hussie'go w
 <a href="https://open.spotify.com/playlist/14IZqZK9O2vyE8TU5KLIbc?si=d3e751b28ecb40e7" target="blank">Deltarune Chapter 2</a>
 </div>
  <div id="zdiecie">
- <img src="fox_zdiecie">
+ <img src="fox_zdjecie.jpg">
  </div>
 </div>
  
