--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-<title></title>
+<title>Toby Fox</title>
 <meta name="author" content="Mateusz Byczek, Kacper Kantarowski">
 <meta name="copyright" content="(c) 2021 Mateusz Byczek, Kacper Kantarowski">
 <meta charset="utf-8">
